# docs

./: .articles.md  .cmds  .linux boot  .resources.md  .stash.md  .system.md  android.md  appimage.md  apple.md  arc.md  archlinux.md  attackontitan.md  bad apple.md  bash.md  browser.md  bsd.md  bsd_kernel.md  btrfs.md  bubblewrap.md  cheatsh.md  chrome.md  chromeos.md  chromiumos.md  clang-dev.md  clang.md  debian.md  distrobox.md  fedora.md  firefox.md  flatpak.md  git.md  github.md  google.md  ios.md  linux-for-beginners.md  linux-platform.md  linux.md  lxd.md  lxd.sh  markdown.md  (+19 more)
.cros/: crostini1
.flinux/: config
.flinux/dep/: depgraph
.obsidian/: graph.json  workspace.json
.trash/: Untitled.md
internal/chromeos/: chromeos.md
linux/: PKGBUILD  linux
linux/container/: container-gui
linux/old/: kwinft  opentabletdriver
media/: bad apple.md
staging/: ..distrobox  .distrobox  .dnf  .fedora.md  .kde_bugs.md  .laptop  .resources.md  .wininstall  articles.md  p  resources.md  sites.md  stash.md
staging/.cros/: crosarch  fedora
staging/.flinux/: pkg  tmppkg
stash/acmicpc/: 20191_.cpp  CMakeLists.txt
wiki/: android.md  appimage.md  apple.md  arc.md  archlinux.md  browser.md  bsd.md  btrfs.md  chromeos.md  cpp.md  darwin.md  distrobox.md  emacs.md  fedora.md  github.md  gpu.md  l4.md  laptops.md  linux-platform.md  linux_kernel.md  lxd.md  macos.md  markdown.md  musl.md  neovim.md  obsidian.md  osu.md  rust.md  steam_deck.md  steamos.md  termux.md  umlinux.md  vaapi.md  video.md  vscode.md  webgpu.md  widevine.md  windows.md  wine.md  wininstall  (+2 more)
(+27 files in other folders)
